# Godot-WebRTC-Match-Maker

./: .gitignore  Godot WebRTC Match Maker.sln  README.md
.github/: CONTRIBUTING  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-dotnet.yml  build-godot.yml  build-rust.yml  labeler.yml  release.yml  sonar.yml
Documentation/Demo/: Chat.md  Game.md  MultiChannel.md  PingPong.md  RPC.md  VideoCall.md
Documentation/Godot/: FurtherGodotSetup.md  GettingStartedDemo.md  (+1 more)
Godot Example Project/: Main.tscn  WebRTC Match Maker Godot Example Project.csproj  WebRTC Match Maker Godot Example Project.sln
Godot Module/: WebRTC Match Maker Godot Module.sln
Godot Project/: Godot Project.sln  Main.cs  Main.tscn  WebRTC Match Maker Godot Project.csproj  WebRTC Match Maker Godot Project.sln  default_bus_layout.tres  export_presets.cfg  icon.svg.import  project.godot
Match Maker Server/: Cargo.toml
Match Maker Server/src/: app_config.rs  ice_candidate_request.rs  ice_candidate_response.rs  lib.rs  main.rs  match_making_query.rs  match_making_request.rs  match_making_response.rs
Match Maker Server/src/data/: match_making_queue.rs  match_making_request.rs  match_making_response.rs  match_making_update.rs  mod.rs  packet.rs  packet_type.rs  peer.rs  request.rs  response.rs  session_description_request.rs  session_description_response.rs
Match Maker Server/src/data/packet/: match_maker_queue.rs  match_maker_request.rs  match_maker_response.rs  match_maker_update.rs  match_making_queue.rs  mod.rs  packet_type.rs
(+87 files in other folders)
