[package]
name = "match_maker_server"
version = "1.0.0"
edition = "2021"

[dependencies]
ws = "0.9.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.7", features = ["v4", "fast-rng", "macro-diagnostics"] }
confy = "0.6.0"
log = "0.4.20"
simple_logger = "4.3.3"
